# mamacare

./: .env  .gitignore  CROWDFUNDING_REMOVAL_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX_GUIDE.md  FHIR_COMPLIANCE_UPDATE_SUMMARY.md  MAMACARE_SYSTEM_DOCUMENTATION.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  SYSTEM_DOCUMENTATION.md  about_platform.html  admin_dashboard.html  admin_dashboard12.html  admin_dashboard_backup.html  admin_setup.html  build.sh  campaign_management.html  chart.js  chat.html  config.js  crowdfunding.html  dashboard.html  docker-compose.yml  doctors.html  education.html  et --hard HEAD~1  feedback-ui.js  hospital_details.html  hospitals.html  index.html  medical_personnel.html  medical_record.html  medical_records.html  medical_records_backup.html  medical_records_backup2.html  medical_records_view - Copy.html  medical_records_view.html  netlify.toml  nginx.conf  pharmacy.html  (+15 more)
backend/: .env  Dockerfile  ENVIRONMENT_SETUP.md  add_middle_name_migration.py  add_test_data.py  app.py  app232.py  app_backup.py  app_new.py  check_doctor_table.py  check_verified_numbers.py  create_default_admin.py  debug_sms.py  demo_sms_format.py  docker_migration.py  fix_admin_access.py  get_pins.py  mamacare.db  manual_migration.py  quick_sms_test.py  requirements.txt  startup.py  test_admin_migration.py  test_api.py  test_docker_sms.py  test_email.py  test_real_sms.py  test_referral_sms.py  test_registration.py  test_sms.py  test_verified_number.py  test_with_your_number.py  update_db.py  verify_admin.py  wait-for-postgres.sh  x.py
docs/: fhir_extensions.md
(+8 files in other folders)
